--- a/style6.css
+++ b/style6.css
@@ -4,7 +4,7 @@ a{
   }
 
 body{
-    background-color: #f0d1d1;
+    background-color: #b8860b;
     font-family: 'Raleway', sans-serif;
     color:black;
 }
